# Video-GPS

./: .gitignore  README.md  config.yaml  pyproject.toml  stereo_calib.json
src/videogps/: __init__.py  __main__.py
src/videogps/core/: __init__.py  camera_rectifier.py  config.py  gps_trajectory.py
src/videogps/processors/: __init__.py  gps_overlay.py  gps_writer.py  rosbag_reader.py  video_generator.py
src/videogps/utils/: __init__.py  geo_utils.py  logger.py  time_sync.py
